finalizado tela onboarding

--- a/Gobar/Views/OnboardingPage.xaml
+++ b/Gobar/Views/OnboardingPage.xaml
@@ -10,7 +10,10 @@
         <vm:OnboardingPageViewModel x:Key="OnboardingPageViewModel" />
     </ContentPage.BindingContext>
 
-    <Grid RowDefinitions="*, 20, 80">
+    <Grid
+        Margin="0"
+        Padding="0"
+        RowDefinitions="Auto, 20, *">
         <CarouselView
             BackgroundColor="White"
             Grid.Row="0"
@@ -22,6 +25,7 @@
                 <DataTemplate>
                     <StackLayout Margin="0" Padding="0">
                         <Image
+                            Aspect="AspectFill"
                             HorizontalOptions="FillAndExpand"
                             Margin="0"
                             Source="{Binding ImageSource}"
@@ -30,7 +34,9 @@
                             BackgroundColor="#F99417"
                             Margin="0"
                             Padding="0"
-                            StrokeShape="RoundRectangle 40,40,0,0">
+                            Stroke="#C49B33"
+                            StrokeShape="RoundRectangle 40,40,0,0"
+                            StrokeThickness="0">
                             <VerticalStackLayout
                                 HorizontalOptions="Center"
                                 Padding="25"
@@ -44,7 +50,10 @@
                 </DataTemplate>
             </CarouselView.ItemTemplate>
         </CarouselView>
-        <StackLayout BackgroundColor="#F99417" Grid.Row="1">
+        <StackLayout
+            BackgroundColor="#F99417"
+            Grid.Row="1"
+            Padding="0,10,0,0">
             <IndicatorView
                 HorizontalOptions="Center"
                 IndicatorColor="White"
@@ -53,11 +62,17 @@
                 x:Name="indicatorView" />
         </StackLayout>
 
-        <StackLayout BackgroundColor="#F99417" Grid.Row="2">
+        <StackLayout
+            BackgroundColor="#F99417"
+            Grid.Row="2"
+            Padding="0,20,0,0">
             <Button
+                FontSize="16"
+                HeightRequest="55"
                 HorizontalOptions="Center"
                 Text="Get Started"
-                VerticalOptions="End" />
+                VerticalOptions="End"
+                WidthRequest="340" />
         </StackLayout>
     </Grid>
 </ContentPage>
