--- a/Gobar/AppShell.xaml
+++ b/Gobar/AppShell.xaml
@@ -7,6 +7,6 @@
     xmlns:local="clr-namespace:Gobar.Views"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
 
-    <ShellContent ContentTemplate="{DataTemplate local:OnboardingPage}" Route="Onboarding" />
+    <ShellContent ContentTemplate="{DataTemplate local:LoginPage}" Route="Onboarding" />
 
 </Shell>
