Criação da tela Authentication

--- a/Gobar/Views/ForgotPassword.xaml
+++ b/Gobar/Views/ForgotPassword.xaml
@@ -22,6 +22,6 @@
 
         </VerticalStackLayout>
 
-        <Button HorizontalOptions="FillAndExpand" Text="Login" />
+        <Button HorizontalOptions="FillAndExpand" Text="Send" />
     </StackLayout>
 </ContentPage>
