--- a/Gobar/Resources/Styles/Styles.xaml
+++ b/Gobar/Resources/Styles/Styles.xaml
@@ -204,6 +204,25 @@
         </Setter>
     </Style>
 
+    <Style TargetType="Label" x:Key="HeadLine4">
+        <Setter Property="TextColor" Value="{AppThemeBinding Light={StaticResource PrimaryBrand900}, Dark={StaticResource White}}" />
+        <Setter Property="BackgroundColor" Value="Transparent" />
+        <Setter Property="FontFamily" Value="PlusJakartaSansBold" />
+        <Setter Property="FontSize" Value="16" />
+        <Setter Property="VisualStateManager.VisualStateGroups">
+            <VisualStateGroupList>
+                <VisualStateGroup x:Name="CommonStates">
+                    <VisualState x:Name="Normal" />
+                    <VisualState x:Name="Disabled">
+                        <VisualState.Setters>
+                            <Setter Property="TextColor" Value="{AppThemeBinding Light={StaticResource Gray300}, Dark={StaticResource Gray600}}" />
+                        </VisualState.Setters>
+                    </VisualState>
+                </VisualStateGroup>
+            </VisualStateGroupList>
+        </Setter>
+    </Style>
+
     <Style TargetType="Label" x:Key="HeadLine5">
         <Setter Property="TextColor" Value="{AppThemeBinding Light={StaticResource PrimaryBrand900}, Dark={StaticResource White}}" />
         <Setter Property="BackgroundColor" Value="Transparent" />
