Finalizado a tela Register

--- a/Gobar/Resources/Styles/Styles.xaml
+++ b/Gobar/Resources/Styles/Styles.xaml
@@ -299,6 +299,25 @@
         </Setter>
     </Style>
 
+    <Style TargetType="Label" x:Key="Body3MidnightBlue">
+        <Setter Property="TextColor" Value="{AppThemeBinding Light={StaticResource MidnightBlue}, Dark={StaticResource White}}" />
+        <Setter Property="BackgroundColor" Value="Transparent" />
+        <Setter Property="FontFamily" Value="PlusJakartaSansRegular" />
+        <Setter Property="FontSize" Value="14" />
+        <Setter Property="VisualStateManager.VisualStateGroups">
+            <VisualStateGroupList>
+                <VisualStateGroup x:Name="CommonStates">
+                    <VisualState x:Name="Normal" />
+                    <VisualState x:Name="Disabled">
+                        <VisualState.Setters>
+                            <Setter Property="TextColor" Value="{AppThemeBinding Light={StaticResource Gray300}, Dark={StaticResource Gray600}}" />
+                        </VisualState.Setters>
+                    </VisualState>
+                </VisualStateGroup>
+            </VisualStateGroupList>
+        </Setter>
+    </Style>
+
     <Style TargetType="Label" x:Key="Display2">
         <Setter Property="TextColor" Value="{AppThemeBinding Light={StaticResource PrimaryBrand900}, Dark={StaticResource White}}" />
         <Setter Property="BackgroundColor" Value="Transparent" />
