--- a/Gobar/Views/ForgotPasswordPage.xaml
+++ b/Gobar/Views/ForgotPasswordPage.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 
 <ContentPage
-    x:Class="Gobar.Views.ForgotPassword"
+    x:Class="Gobar.Views.ForgotPasswordPage"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
     <StackLayout Margin="20,125,20,0">
