--- a/Gobar/Views/RegisterPage.xaml
+++ b/Gobar/Views/RegisterPage.xaml
@@ -4,7 +4,13 @@
     x:Class="Gobar.Views.RegisterPage"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
+    xmlns:vm="clr-namespace:Gobar.ViewModels"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
+
+    <ContentPage.BindingContext>
+        <vm:RegisterPageViewModel x:Key="RegisterPageViewModel" />
+    </ContentPage.BindingContext>
+
     <StackLayout Margin="20,60,20,0">
         <VerticalStackLayout>
             <Label Style="{StaticResource Display2}" Text="Register here " />
@@ -69,7 +75,10 @@
 
 
             <VerticalStackLayout Margin="0,10,0,10" Spacing="10">
-                <Button HorizontalOptions="FillAndExpand" Text="Register" />
+                <Button
+                    Command="{Binding GoToAuthenticationPageCommand}"
+                    HorizontalOptions="FillAndExpand"
+                    Text="Register" />
 
                 <Label
                     HorizontalOptions="Center"
@@ -84,7 +93,11 @@
                             <Span
                                 FontAttributes="Bold"
                                 Text="Login"
-                                TextColor="#363062" />
+                                TextColor="#363062">
+                                <Span.GestureRecognizers>
+                                    <TapGestureRecognizer Command="{Binding GoToLoginPageCommand}" />
+                                </Span.GestureRecognizers>
+                            </Span>
                         </FormattedString>
                     </Label.FormattedText>
                 </Label>
