--- a/Gobar/Views/LoginPage.xaml
+++ b/Gobar/Views/LoginPage.xaml
@@ -7,7 +7,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
 
     <ContentPage.BindingContext>
-        <vm:LoginPageViewModel x:Key="LoginPageViewModel" />
+        <vm:LoginPageViewModel x:Name="LoginPageViewModel" />
     </ContentPage.BindingContext>
 
     <Grid
