--- a/Gobar/Views/OnboardingPage.xaml
+++ b/Gobar/Views/OnboardingPage.xaml
@@ -7,7 +7,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
 
     <ContentPage.BindingContext>
-        <vm:OnboardingPageViewModel x:Key="OnboardingPageViewModel" />
+        <vm:OnboardingPageViewModel x:Name="OnboardingPageViewModel" />
     </ContentPage.BindingContext>
 
     <Grid
